# rust-notes

./: .gitignore  README.md  rustreset.sh  rustupdate.sh
code/amethyst-experiments/: Cargo.toml
code/atomspace/: Cargo.toml  Readme.md  build.rs  wrapper.h
code/atomspace/src/: lib.rs
code/book/adder/src/: lib.rs
code/book/chap13/: Cargo.toml
code/book/chap13.2/: Cargo.toml
code/book/chap13.2/src/: main.rs
code/book/chap13/src/: main.rs
code/book/chap16/: Cargo.toml
code/book/chap162/: Cargo.toml
code/book/chap163/: Cargo.toml
code/book/chap20/: Cargo.toml
code/book/chap201/: 404.html  Cargo.toml
code/book/minigrep/: Cargo.toml
code/chap13/src/: main.rs
code/check_service/: Cargo.toml  toread.md
code/check_service/src/: main.rs
code/excercises/: argumenthandling.rs
code/expansion-trove/: hasparts.rs  partof.rs  plystrindex.rs
code/gist/: appendfile.rs  argumenthandling.rs  loadfiletest.rs  macros.rs  reftest.rs  tomlcratetest.rs
code/hello-rocket/: Cargo.toml
code/minigrep/src/: lib.rs  main.rs
code/recipeshuffle/: .gitignore  Cargo.toml
code/recipeshuffle/data/: whattoeat.txt
code/recipeshuffle/src/: main.rs
code/rustbook/: Cargo.toml
code/rustbook/adder/: Cargo.toml
code/serdejson/: .gitignore  Cargo.toml
code/serdejson/src/: PeriodicTableJSON-backup.json  PeriodicTableJSON-full.json  PeriodicTableJSON.json  main.rs  testout.json  testout1.json  testout2.json
code/serdejson/src/aspects/: elementreading.rs  mod.rs
code/serdejson/src/common/: fileoperations.rs  mod.rs
code/snippets/: comparefoo.rs
code/specstest/: Cargo.toml
code/specstest/src/: main.rs
code/strings/: Cargo.toml
code/strings/src/: fileoperations.rs  main.rs
code/tokioToOpenCog/: Cargo.toml
code/tokioToOpenCog/src/: main.rs
code/tomltest/: Cargo.toml
code/tomltest/src/: main.rs  tomltest.toml
notes/: bestpracticecoding.md  crates.md
(+10 files in other folders)
