# ideas from https://gist.github.com/gkbrk/48fa444360808501e4d1c0bd8f216b9b#file-server-rs

[package]
name = "recipeshuffle"
version = "0.1.0"
authors = ["Hartmut Prochaska <hartmut.prochaska@gmail.com>"]

[dependencies]
tokio-core = "0.1" # https://crates.io/crates/tokio-core
rand = "0.3" # https://crates.io/crates/rand
futures = "0.1"
